# ilksh.github.io

./: .gitignore  Algorithm.html  Gemfile  LICENSE  README.md  _config.yml  algoTemplate.html  build.sh  index.css  index.html  package-lock.json  package.json  project1.md  pyproject.toml  requirements.txt  tailwind.config.js  temp.cpp  temp.html  test.html  test.ipynb  test.py
.history/: _config_20241230225959.yml  _config_20241230231111.yml  _config_20241230232251.yml  _config_20250102161306.yml  _config_20250103000759.yml  _config_20250103000819.yml  _config_20250103000852.yml  _config_20250103000929.yml  _config_20250103000954.yml  _config_20250103001203.yml  _config_20250103002301.yml  _config_20250103002535.yml  _config_20250103003302.yml  _config_20250103003603.yml  _config_20250103004501.yml  _config_20250103110921.yml  index_20240907012732.html
.zed/: settings.json
Academic Project/: CS571.html  CS573.html  STAT512.html
Selected Projects/: DRP.html
_data/: navigation.yml
_includes/: footer.html  head.html  header.html  module.html
_pages/: about.md  coursework.md  experience.md  index.html  project.html  project.md  study.md  style.css  styles.css
_posts/: 2023-07-28-writing-posts-test.md  2023-07-29-BFS.md  2025-01-13-Test.md
algoTemplate/: algo.html  cs algoT.html  cs algoT.ipynb  intro.html  intro.ipynb  ml algoT.html  ml algoT.ipynb
assets/: algoStyle.css
book-notes/: _template.html  index.html  index.json  zero-to-one.html
courses/: index.html  index.json  large-scale-data-analytics.html  multivariate-calculus.html
docs/: index.css  (+1 more)
(+139 files in other folders)
